crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__sorting__select_order_by_album_artist_name.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Bad Boy Boogie"
      },
      {
        "Name": "Breaking The Rules"
      },
      {
        "Name": "C.O.D."
      },
      {
        "Name": "Dog Eat Dog"
      },
      {
        "Name": "Evil Walks"
      }
    ]
  }
]
