crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__sorting__select_order_by_name.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "A Matter of Life and Death"
      },
      {
        "Title": "A Real Dead One"
      },
      {
        "Title": "A Real Live One"
      },
      {
        "Title": "A Soprano Inspired"
      },
      {
        "Title": "A TempestadeTempestade Ou O Livro Dos Dias"
      }
    ]
  }
]
