crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__sorting__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Crazy Train"
      },
      {
        "Name": "I Don't Know"
      }
    ]
  }
]
